--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
+
 <html>
-	<head>
-		<title>Site do império</title>
-		<link rel="icon" href="img/favicon.ico" type="image/x-icon">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<meta charset="utf-8">
-	</head>
-	<body>
-		<header>
-			Lorem ipsum
-		</header>
+<head>
+	<meta charset="utf-8">
+	<title>Império Galático</title>
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+	<header>
+		<img id="HeaderImg" src="img/logo.jpg">
+		<div id="HeaderContent">
+			<h1>Site do Império</h1>
+			<h2><i>Imperius Unitada ober Totallex</i></h2>
+		</div>
+	</header>
 
-		<h1>dolor sit amet</h1>
-		<p>
-			Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
-		</p>
-		<h2>dolor sit amet</h2>
-		<h3>dolor sit amet</h3>
-		<h4>dolor sit amet</h4>
-		<h5>dolor sit amet</h5>
-		<h6>dolor sit amet</h6>
+	<p>
+		Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
+	</p>
 
-		<footer>
-			Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae.
-		</footer>
-	</body>
+	<footer>Rodapé. Todos os direitos reservados. E mais alguma coisa assim. Já tem bastante coisa? Acho que não. Mas vou acabar bem aqui.</footer>
+</body>
 </html>
