--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
 		</div>
 	</header>
 
-	<p>
-		Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
-	</p>
+	<div id="content">
+		<p>
+			Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
+		</p>
+	</div>
 
-	<footer>Rodapé. Todos os direitos reservados. E mais alguma coisa assim. Já tem bastante coisa? Acho que não. Mas vou acabar bem aqui.</footer>
+	<footer>
+		Rodapé. Todos os direitos reservados. E mais alguma coisa assim. Já tem bastante coisa? Acho que não. Mas vou acabar bem aqui.
+	</footer>
 </body>
 </html>
