Site refeito e simplicado o código do design

--- a/index.html
+++ b/index.html
@@ -2,28 +2,58 @@
 
 <html>
 <head>
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
 	<meta charset="utf-8">
 	<title>Império Galático</title>
-	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<header>
-		<img id="HeaderImg" src="img/logo.jpg">
-		<div id="HeaderContent">
+		<img id="headerImg" src="img/logo.jpg">
+		<div id="headerContent">
 			<h1>Site do Império</h1>
-			<h2><i>Imperius Unitada ober Totallex</i></h2>
+			<h2>Imperius Unitada ober Totallex</h2>
 		</div>
 	</header>
-
 	<div id="content">
-		<p>
-			Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
-		</p>
+		<div id="sideContent">
+			<h1>Inimigos do império</h1>
+			<p> bansiknd alskdnalsd amsdas</p>
+
+			<h1>Junte-se a nós</h1>
+			<p>naskdj laisd asldn asind asin</p>
+			<p>
+				Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
+			</p>
+			<p>
+				Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
+			</p>
+			<p>
+				Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
+			</p>
+			<p>
+				Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
+			</p>
+		</div>
+
+		<div id="mainContent">
+			<p>
+				Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
+			</p>
+			<p>
+				Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
+			</p>
+			<p>
+				Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
+			</p>
+			<p>
+				Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
+			</p>
+		</div>
 	</div>
 
-	<footer>
-		Rodapé. Todos os direitos reservados. E mais alguma coisa assim. Já tem bastante coisa? Acho que não. Mas vou acabar bem aqui.
-	</footer>
+	<footer>Rodapé, que tá zuado bagarai. Se alguém ver isso avisa.</footer>
 </body>
 </html>
