mudei as cores e alguns conteúdos

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 	<header>
 		<img id="headerImg" src="img/logo.jpg">
 		<div id="headerContent">
-			<h1>Site do Império</h1>
-			<h2>Imperius Unitada ober Totallex</h2>
+			<h1 align=center> Império Galático </h1>
+			<h2 align=center>Nova Ordem</h2>
 		</div>
 	</header>
 	<div id="content">
 		<div id="sideContent">
-			<h1>Inimigos do império</h1>
-			<p> bansiknd alskdnalsd amsdas</p>
+			<h1 align=center >Inimigos do império</h1>
+			<p align=center > A reformada Aliança Rebelde chamada Resistência</p>
 
-			<h1>Junte-se a nós</h1>
-			<p>naskdj laisd asldn asind asin</p>
+			<h1 align=center >Junte-se a nós</h1>
+			<p align=center >naskdj laisd asldn asind asin</p>
 			<p>
 				Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
 			</p>
@@ -39,14 +39,15 @@
 		</div>
 
 		<div id="mainContent">
-			<p>
-				Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
+			<p align=center >História</p>
+			<p align="justify">
+				O Império Galáctico é o governo que subiu ao poder ao fim das Guerras Clônicas, substituindo a República Galáctica. A autoridade central residia em Darth Sidious, publicamente conhecido como o Imperador Galáctico Palpatine, que também era o Lorde Negro dos Sith.
 			</p>
-			<p>
-				Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
+			<p align="justify">
+				Por quase duas décadas, o corpo legislativo foi o Senado Imperial, mas ele foi dissolvido pelo Imperador poucos dias antes da Batalha de Yavin. Durante o reino do Império, inúmeros sistemas estelares foram conquistados e atos dissidentes foram brutalmente esmagados pelo Exército e Marinha Imperiais em rápida expansão.
 			</p>
-			<p>
-				Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
+			<p align="justify">
+				O Império também supervisou a quase exterminação dos Jedi, com a destruição do Templo Jedi em Coruscant e sua transformação no recém-reformado Palácio Imperial.
 			</p>
 			<p>
 				Morbi hendrerit diam velit, eget lobortis arcu tincidunt eget. Cras viverra felis enim, eget aliquam velit pellentesque vitae. Duis id ligula at velit pulvinar pharetra faucibus vel neque. Mauris pulvinar ut orci id commodo. Vestibulum sit amet suscipit orci. Proin cursus purus eu augue iaculis, ut ornare diam feugiat. Ut luctus in erat at fermentum. Sed tellus eros, fringilla ac turpis et, facilisis egestas lorem. Quisque justo libero, varius at lectus sed, lobortis congue velit. Sed quis nulla malesuada, ullamcorper orci ut, rhoncus turpis. Nunc sit amet vehicula leo, et convallis elit.
@@ -54,6 +55,6 @@
 		</div>
 	</div>
 
-	<footer>Rodapé, que tá zuado bagarai. Se alguém ver isso avisa.</footer>
+	<footer>Assassinos do Obi-Wan Kenobi desde 1977</footer>
 </body>
 </html>
