--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 	<meta charset="utf-8">
 	<title>Império Galático</title>
+
+	<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -13,14 +15,14 @@
 	<header>
 		<img id="headerImg" src="img/logo.jpg" alt="Logo do império">
 		<div id="headerContent">
-			<h1>Império Galático</h1>
+			<h1 id="titleContent">Império Galático</h1>
 			<h2>Nova Ordem</h2>
 		</div>
 	</header>
 
 	<div id="content">
 		<div id="sideContent">
-			<h1 style="text-align: right; margin-right: 10px;">Os Sith</h1>
+			<h1>Os Sith</h1>
 
 			<p>Uma ordem de guerreiros seguidores de Bogan que se opõem aos Jedi</p>
 
@@ -52,6 +54,7 @@
 
 			<h1>Poder Militar</h1>
 
+			<div></div>
 			<h2>Sabre de luz</h2>
 			<img src="img/sabre.png" id="contentImg" alt="sabre de luz" width="110" height="200">
 				
@@ -76,7 +79,7 @@
 	</div>
 
 	<footer>
-		Assassinos do Obi-Wan Kenobi desde em um futuro, muito, muito distante. Todos os direitos reservados.
+		Rodapé.
 	</footer>
 </body>
 </html>
