Rodapé e detalhes na visualização

--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
 
 			<h1 id="InimigosImperio">Inimigos do império</h1>
 
-			<p>A reformada Aliança Rebelde chamada Resistência</p>
+			<p>A reformada Aliança Rebelde chamada Resistência.</p>
+			<img src="img/res.png" alt="Logo dos rebeldes" width="300" height="160" style="margin-bottom: 60px;">
 
-			<img src="img/res.png" alt="Logo dos rebeldes" width="300" height="160" style="margin-bottom: 15px;">
+			<p>A Ordem Jedi. Estão em desvantagem numérica pelo nosso grandioso exército imperial, porém são bastante poderosos.</p>
+			<img src="img/jedi.png" width="150" height="150" style="margin-bottom: 15px;">
 		</div>
 
 		<div id="mainContent">
@@ -82,12 +84,16 @@
 			<img src="img/des.png" alt="Destroyer" width="250" height="160">
 
 			<h2>Estrela da morte</h2>
-			<img src="img/em.png" alt="Estrela da morte" width="300" height="300">
+			<img src="img/em.jpg" alt="Estrela da morte" width="300" height="300">
 		</div>
 	</div>
 
 	<footer>
-		© 2019 Todos os direitos reservados.
+		<a href="#content">Topo da página</a>
+		<a href="#historia">História</a>
+		<a href="#poderMilitar">Poder militar</a>
+		<a href="#InimigosImperio">Inimigos do império</a>
+		<a href="https://pt.wikipedia.org/wiki/Imp%C3%A9rio_Gal%C3%A1tico_(Star_Wars)" target="_blank">Império na Wikipédia (página externa)</a> 
 	</footer>
 </body>
 </html>
