--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 	<header>
 		<img id="headerImg" src="img/logo.jpg" alt="Logo do império">
 		<div id="headerContent">
-			<div id="headerMenu">
+			<nav id="headerMenu">
 				<a href="#historia">História</a>
 				<a href="#poderMilitar">Poder militar</a>
 				<a href="#InimigosImperio">Inimigos do império</a>
-			</div>
+			</nav>
 
 			<h1>Império Galático</h1>
 			
@@ -89,11 +89,13 @@
 	</div>
 
 	<footer>
-		<a href="#content">Topo da página</a>
-		<a href="#historia">História</a>
-		<a href="#poderMilitar">Poder militar</a>
-		<a href="#InimigosImperio">Inimigos do império</a>
-		<a href="https://pt.wikipedia.org/wiki/Imp%C3%A9rio_Gal%C3%A1tico_(Star_Wars)" target="_blank">Império na Wikipédia (página externa)</a> 
+		<nav>
+			<a href="#content">Topo da página</a>
+			<a href="#historia">História</a>
+			<a href="#poderMilitar">Poder militar</a>
+			<a href="#InimigosImperio">Inimigos do império</a>
+			<a href="https://pt.wikipedia.org/wiki/Imp%C3%A9rio_Gal%C3%A1tico_(Star_Wars)" target="_blank">Império na Wikipédia (página externa)</a>
+		</nav>
 	</footer>
 </body>
 </html>
